// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a table 1`] = `
<table
  className="cf-16x3gyk"
>
  <thead
    className="cf-1gxgayq"
  >
    <tr
      className="cf-1p0v7iz"
    />
  </thead>
  <tbody
    className="cf-tf7x23"
  />
</table>
`;

exports[`should render the dataset in columns 1`] = `
<table
  className="cf-16x3gyk"
>
  <thead
    className="cf-1gxgayq"
  >
    <tr
      className="cf-1p0v7iz"
    >
      <th
        className="cf-1avjog3"
      >
        Name
      </th>
      <th
        className="cf-1lg90rw"
      >
        Value
      </th>
    </tr>
  </thead>
  <tbody
    className="cf-tf7x23"
  >
    <tr
      className="cf-1p0v7iz"
    >
      <td
        className="cf-19t8cnp"
      >
        Foo
      </td>
      <td
        className="cf-prxjqy"
      >
        foo
      </td>
    </tr>
    <tr
      className="cf-1dqe1yv"
    >
      <td
        className="cf-19t8cnp"
      >
        Bar
      </td>
      <td
        className="cf-prxjqy"
      >
        bar
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should support flashes 1`] = `
<table
  className="cf-16x3gyk"
>
  <thead
    className="cf-1gxgayq"
  >
    <tr
      className="cf-1p0v7iz"
    />
  </thead>
  <tbody
    className="cf-tf7x23"
  >
    <tr
      className="cf-1xobv77"
    />
    <tr
      className="cf-1dqe1yv"
    />
  </tbody>
</table>
`;

exports[`should support row type/accent 1`] = `
<table
  className="cf-16x3gyk"
>
  <thead
    className="cf-1gxgayq"
  >
    <tr
      className="cf-1p0v7iz"
    />
  </thead>
  <tbody
    className="cf-tf7x23"
  >
    <tr
      className="cf-1xobv77"
    />
    <tr
      className="cf-1dqe1yv"
    />
  </tbody>
</table>
`;

exports[`should support table props 1`] = `
<table
  className="cf-96xfvr"
>
  <thead
    className="cf-1gxgayq"
  >
    <tr
      className="cf-1p0v7iz"
    />
  </thead>
  <tbody
    className="cf-tf7x23"
  />
</table>
`;
